Tomcat vs Netty 스레드 모델 전면 재작성 + VisualVM 추가
- Tomcat vs Netty (388→799줄) — Thread-per-Request vs EventLoop 딥다이브
  Acceptor/Poller/Worker 구조, Netty Boss/Worker Group, Virtual Thread, Kotlin Coroutine 비교
- 모니터링에 VisualVM 섹션 추가 — 힙 덤프, 스레드 덤프, 프로파일링, 도구 비교

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>